# sf-shopping-list

./: .gitignore  README.md  lists.py  package.json  serverless.yml  share.py  user.py
backend/: package.json  serverless.yml
backend/api/: http-client.env.json  openapi.yaml  requirements-dev.txt  requirements.txt  serverless.yml  test.http
backend/apiv2/: api_models.py  handlers.py  openapi.yaml  pyproject.toml  serverless.yml
backend/apiv2/aws_utils/: event_parser.py  http_errors.py
backend/apiv2/sf_shopping_list/: api_models.py
backend/apiv2/sf_shopping_list/data/access/: base_data.py  lists.py
backend/apiv2/sf_shopping_list/data/clients/: dynamodb.py
backend/apiv2/sf_shopping_list/data/db/: base_data.py  base_ops.py  lists.py  lists_ops.py  user_to_lists.py
backend/apiv2/sf_shopping_list/data/dto/: base_dto.py  lists_dto.py
backend/apiv2/sf_shopping_list/data/model/: base_model.py  list_doc.py  user_to_lists_doc.py
backend/apiv2/sf_shopping_list/utils/: consts.py  errors.py
backend/apiv2/sf_shopping_list/utils/mappers/: list_mappers.py
backend/apiv2/tests/: boto3_mocks.py  conftest.py  data.yaml  test_sf_shopping_list.py
backend/apiv2/tests/data/dto/: test_lists_dto.py
backend/apiv2/tests/events/: __init__.py  api_gateway_v2_event.json
backend/apiv2/tests/test_aws_utils/: test_event_parser.py
backend/shared/: serverless.yml
backend/shoppinglist/: lists.py
backend/tests/: test_lists.py
docs/: db_schema.md
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/amplify/: team-provider-info.json
utils/: __init__.py
(+32 files in other folders)
