[tool.poetry]
name = "sf_shopping_list"
version = "0.1.0"
description = ""
authors = ["Maksymilian Babarowski <maksymilian.babarowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.18.1"
orjson = "^3.6.1"
boto3 = "^1.18.16"
shortuuid = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
datamodel-code-generator = "^0.11.9"
boto3-stubs = {extras = ["dynamodb"], version = "^1.18.16"}
moto = {extras = ["dynamodb"], version = "^2.2.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
